# wikitrivia-generator

./: .gitignore  Cargo.toml  README.md
src/: item.rs  main.rs
src/item/: process.rs
src/item/process/: item_label.rs  page_views.rs  wikipedia.rs
