[package]
name = "wikitrivia"
version = "0.1.0"
authors = ["Tom Watson <tom@tomjwatson.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.4.5"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
urlencoding = "1.1.1"
